...
                            Image(systemName: "trash.circle.fill")
                                .font(.title2)
                                .foregroundColor(.red)
                        }

                        VStack(alignment: .leading) {
                            Text("Delete All Data")
                                .foregroundColor(.red)
                                .font(.body)
                            Text("Permanently delete all recipes and settings")
                                .foregroundColor(.secondary)
                                .font(.caption)
                        }
...
